<resources>
    <string name="app_name">My finance</string>
    <string name="list_expenses_menu_bottom">List expenses</string>
    <string name="list_categories_menu_bottom">Categories</string>
    <string name="reports_menu_bottom">Reports</string>
    <string name="add_new_category_button">Add new category</string>
    <string name="add_new_expense_button">Add new expense</string>
    <string name="label_hint_category">Enter name category</string>
    <string name="label_hint_expense">Enter name expense</string>
    <string name="label_hint_category_expense">Enter category expense</string>
    <string name="label_hint_amount_expense">Enter amount</string>
    <string name="label_hint_currency_expense">Currency</string>
    <string name="select_period">Select period:</string>
    <string name="data_from_statistic">Data from</string>
    <string name="data_to_statistic">Data to</string>
    <string name="statistic_operations">Operations</string>
    <string name="choose_color_add_category">Сhoose color</string>
    <string name="settings">Settings</string>
    <string name="settings_message">Setting in development</string>
    <string name="added_new_category_button">Added new category</string>
    <string name="added_new_expense_button">Added new expense</string>
</resources>