<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:hint="@string/label_hint_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryItemTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/chooseColorForCategory"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryEditText"
        app:layout_constraintBottom_toTopOf="@id/addNewCategoryButton">

        <Button
            android:id="@+id/chooseColourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color_add_category"/>

        <View
            android:id="@+id/viewWithChosenColour"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/defaultColour"/>

    </LinearLayout>

    <Button
        android:id="@+id/addNewCategoryButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/add_new_category_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseColorForCategory" />

</androidx.constraintlayout.widget.ConstraintLayout>